HTLC done for review

--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -46,6 +46,12 @@ Steps to find the maximizing the fee profit for outgoing channel $C$ assuming pa
 	\item Maximizing fee * cumulative difference.
 \end{enumerate} 
 
+
+Where the use of Johnson over Floyd-Warshall depends on the sparseness of G as
+
+\[ O(V^3) \]
+
+\[ O(V*E*log(V)) \]
 \section{Topology}
 
 Network topology
