--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -51,7 +51,8 @@
 			\vrule height .3ex width .15ex\hfil}
 		\vbox{\copy2\box0}\box2}}
 
-\def\mytitle{Routing Fee Estimation in Lightning Network}
+%\def\mytitle{Routing Fee Estimation in Lightning Network}
+\def\mytitle{Emergent Routing Policies in the Lightning Network}
 
 % Routing Fee Estimation in Bidirectional payment channel networks
 % Non Eploitable pricing of liqid channels in the lightning network
@@ -125,8 +126,7 @@
 	
 	  		\huge{\textbf{\course}}\\
 	  		\vspace{10mm}
-			%\LARGE{ Routing Fee Estimation in the Lightning Network } \\
-	  		\LARGE{ Emergent Routing Policies in the Lightning Network } \\
+	  		\LARGE{ \mytitle } \\
 	  		\vspace{2mm}
 		
 			\begin{footnotesize}
