--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -622,7 +622,7 @@ year = "",
 	author = {},
 	title = {Thesis source repository},
 	howpublished = {
-	\url{https://github.com/Johnstedt/master-thesis-ln-fee-estimation}},
+		\url{https://github.com/Johnstedt/master-thesis-ln-fee-estimation}},
 	note = {},
 	year = "",
 }
@@ -638,7 +638,44 @@ year = "",
 	day = "15", 
 	month = "October",
 	year = "1999",
-	page = "509-512"
+	page = "509-512",
+	howpublished = {
+		\url{http://barabasi.com/f/67.pdf}
+	}
+}
+
+@article{
+	barabasi:scale:free,
+	author = {Barabasi, Albert-Lászlo},
+	title = "Network Science The Scale Free Property",
+	day = "09", 
+	month = "September",
+	year = "2014",
+	howpublished = {
+		\url{http://barabasi.com/f/623.pdf}
+	}
+}
+
+@article{
+	bollobas:janson:riordan:transition:random,
+	author = {Bollobás, Béla and Janson, Svante and Riordan, Oliver},
+	title = "The Phase Transition in Inhomogeneous Random Graphs",
+	day = "29", 
+	month = "April",
+	year = "2005",
+	howpublished = {
+		\url{https://arxiv.org/pdf/math/0504589.pdf}
+	}
+}
+
+@article{
+	callaway:hopcraft:randomly:grown:graphs,
+	author = {Callaway, Duncan S. and Hopcroft, John E. and Kleinberg, Jon M. and Newman, M. E. J. and Strogatz, Steven H.},
+	title = "Are randomly grown graphs really random?",
+	year = "",
+	howpublished = {
+		\url{https://arxiv.org/pdf/cond-mat/0104546.pdf}
+	}
 }
 
 @misc{
@@ -646,8 +683,56 @@ year = "",
 	author = {},
 	title = "Gephi",
 	howpublished = {
-	\url{https://github.com/gephi/gephi}},
+		\url{https://github.com/gephi/gephi}
+	},
 }
+
+@article{
+	freeman:betweenness centrality,
+	author = { Freeman, Linton C. },
+	title = "A Set of Measures of Centrality Based on Betweenness",
+	journal = "Sociometry",
+	vol = "40",
+	No = "1",
+	page = "35-41",
+	month = "Mars",
+	year = "1977",
+	howpublished = {
+		\url{https://www.researchgate.net/publication/216637282_A_Set_of_Measures_of_Centrality_Based_on_Betweenness}
+	}
+}
+
+%% Toplogy algorithms 
+
+@article{
+	brandes:betweenness:centrality:algorithm,
+	author = {Brandes, Ulrik},
+	title = "On Variants of Shortest-Path Betweenness Centrality and their Generic Computation",
+	day = "12", 
+	month = "November",
+	year = "2007",
+	howpublished = {
+	\url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.72.9610&rep=rep1&type=pdf}
+	}
+}
+
+@article{
+	johnson:shortest:path:sparse:network,
+	author = { Johnson, Donald B. },
+	title = "Efficient algorithms for shortest paths in sparse networks",
+	journal = "Journal of the Association for Computing Machinery",
+	vol = "24",
+	No = "1",
+	page = "1-13",
+	month = "January",
+	year = "1977",
+	howpublished = {
+		\url{http://bioinfo.ict.ac.cn/~dbu/AlgorithmCourses/Lectures/Lec7-Johnson.pdf}
+	}
+}
+
+
+
 
 % Game Theory 
 
