--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -24,11 +24,16 @@
     26 and 58 percent, respectively.
 \fi
 
-	In payment channel network, such as the lightning network, the channel
-	procure a fee to the operator if payment route passes the channel.
-	Currently the fee is mostly manually set procuring an unoptimized profit to
-	 the operator.
+	In payment channel network, such as the lightning network, the routing
+	nodes receives a fee as compensation for displaced liquidity and operational
+	costs. Currently this fee is mostly manually set procuring an unoptimized profit to
+	the node operator. TODO: TYPES OF POLICIES HERE, NOT ONLT PRICE BIT PREFERENTIAL ATTACHMENT, RECEIVED CHANNELS
+	AND OPTIMAL STRATEGY AS PRODUCT OF OTHERS STRATEGIES; HENCE GAME THEORY. 
 	
-	A simulation study was performed where many policies was 		 
+	A simulation study was performed where many policies was pitted against 
+	each other to find emergent equilibria under competitive market pressure. Were such
+	equilibrium may lie have further consequences for the network in form
+	of total throughput, routing cost and robustness.
+		 
 	
 	
