--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -170,26 +170,38 @@
 	
     \twocolumn
 
-	\label{sec:problem}
+	\label{chapter:problem}
 	\input{problem}
 	
 	\clearpage
-	
+
+	\label{chapter:macroeconomics}	
 	\input{macroeconomics}
 	
 	\clearpage
+	
+	\label{chapter:bitcoin}
 	\input{bitcoin}
+	
 	\clearpage
+	
 	\label{sec:scaling}
 	\input{scaling}
+	
 	\clearpage
+	
 	\input{lightning}
+	
 	\clearpage
+	
 	\label{sec:evaluation}
 	\input{evaluation}
+	
 	\clearpage
+	
 	\label{sec:results}
 	\input{results}
+	
 	\clearpage
 	\label{sec:discussion}
     \input{discussion}
