--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -20,7 +20,7 @@ Increasing the amount of transactions would also increase the imposing cost for 
 
 % would come at an increased cost for the ecosystem (bandwidth, processing, and storage for relay nodes, as well as an impact on propagation speed of blocks on the network
 
-Math example, compare visa 
+% TODO: Math example, compare visa 
 
 \section{Increasing block size limit}
 
@@ -52,9 +52,11 @@ One of the earliest attempts to increase the block size was when node Bitcoin XT
 	\centering
 	\includegraphics[width=8cm]{external/Bitcoin_XT_Nodes.png}
 	\caption{\textit{Historic Bitcoin XT node count. As of 2019-02-25 only 3 nodes are still active. Data retrieved from coin.dance\cite{coin:dance}.}}
-	\label{fig:equilibrium}
+	\label{fig:xt_nodes}
 	\hspace*{2mm} 	
 \end{figure}
+
+As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive support and is now dead. 
 
 \subsection{The bitcoin cash saga}
 
@@ -64,4 +66,8 @@ One of the earliest attempts to increase the block size was when node Bitcoin XT
 
 \section{Removing decentralization}
 
+\section{Side channel}
+
 \section{Off-chain scaling}
+
+\section{Rational for a small blocks}
