--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -3,6 +3,8 @@
 \section{Background}
     \label{sec:background}
 
+	( When a majority of the text is written, this will be filled in. )
+
 \section{Aim}
     \label{sec:aim}
 
@@ -20,30 +22,32 @@ This thesis aim to address following three questions:
 \section{Related work}
     \label{sec:related_work}
 
-	Nothing in the literature that addresses the estimation of the Lightning
-	Network Routing Fee has been found. 
+	Little to nothing in the literature that addresses the Lightning Network Routing Policies has been found. Rene Pickard have made some early attempts to find suitable channel parties with traditional graph heuristics[unpublished but need source here]. Further conversation with people in the community confirms that this problem set is known yet largely unexplored.
 	
-	A similar problem at first glance, the estimation of the on-chain
-	Bitcoin Network(BN) Fee has been covered extensively. However it's not applicable, nor
-	is it similar other than domain. The BN Fee problem is more direct since the competing transaction 
-	fees(mem-pool) are known at all times and estimating a fee too low can be corrected by \textit{fee bumping}\footnote{Broadcasting a new transaction spending the same UTXO with a higher fee.} or 
-	\textit{child-pay-for-parent}\footnote{Using the unconfirmed parent UTXO in a new transaction, a miner must include the parent tx to be able to mine the child tx  and receive the child tx fee.} implementations. Most wallets have a decent fee estimator implemented.
+	The actual routing in LN has been researched[source] and implemented[source]. Further efficient sharing of routing tables have been proposed.
 	
-	Problems dealing with competing interests are many in the bitcoin domain. Game Theory has mostly been 
-	applied to \textit{mining}. E.g. How electricity prices affect mining\cite{singh:dwivedi:strivastava:energy:consumption:mining} and How the introduction of uncle and 
-	nephew rewards would affect mining strategies\cite{niu:feng:selfish:mining:ethereum}.
+	A similar problem at first glance, the estimation of the on-chain Bitcoin Network Fee has been covered extensively. However it's not applicable, nor is it even similar as a problem set. The Bitcoin Fee problem is far simpler as the competing transaction fees(mem-pool) are known at all times and estimating a fee too low can be corrected by \textit{fee bumping}\footnote{Broadcasting a new transaction spending the same UTXO with a higher fee.} or \textit{child-pay-for-parent}\footnote{Using the unconfirmed parent UTXO in a new transaction, a miner must include the parent tx to be able to mine the child tx and receive the child tx fee.} implementations. Most wallets have a decent fee estimator implemented.
 	
+	As the Lightning Network is indeed a network and many problems is yet another incarnation of already solved graph problems. In a graph the pairs of shortest paths passing through a node may be viewed as a measurement, Betweenness Centrality, as introduced by Freeman. If the edge weigh is the cost payable to the node, the maximum profits may be calculated with either Floyd-Warshall or Johnson in combination with single source Dijkstra assuming an uniform payment distribution between node pairs. The attributes of the network as it emerges and the consequences on throughput and robustness have also been extensively researched in the field of topology.
+	
+	Emergence of equilibria as the product of policies of competing actors is neither new or rare in the fields as Biology and Economy. Ideas as the Standard Price Theory, Evolutionary Stable Strategies and more widely Game Theory has aided in the formulation of the thesis and the construction of the simulations.
+	
+	Lastly, bitcoin and off-chain proposals have opened a plethora of possible research topics in which fascinating semi-related research is published every day.  
+	
+%	Problems dealing with competing interests are many in the bitcoin domain. Game Theory has mostly been 
+%	applied to \textit{mining}. E.g. How electricity prices affect mining\cite{singh:dwivedi:strivastava:energy:consumption:mining} and How the introduction of uncle and 
+%	nephew rewards would affect mining strategies\cite{niu:feng:selfish:mining:ethereum}.
 	
 \section{Structure}
 
-This thesis is divided into 8 chapters, including this one. The first four chapters gives a wide overview of Bitcoin, the Lightning Network. Chapters 6 and 7 aims to answer the thesis question by constructing, evaluating and simulating routing policies. The last chapter 8 discusses the result,  conclusions are drawn and elaborating on future work.
+This thesis is divided into 8 chapters, including this one. The first four chapters gives a wide overview of Bitcoin, the Lightning Network. Chapters 6 and 7 aims to answer the thesis question by formulating, evaluating and simulating routing policies. The last chapter 8 discusses the result and conclusions are drawn and elaborating on future work.
 
 \begin{enumerate}
-	\item \textbf{Introduction}: This chapter introduces the thesis.
-	\item \textbf{Macroeconomics}:
-	\item \textbf{The Bitcoin Network}
-	\item \textbf{Scaling Bitcoin}
-	\item \textbf{The Lightning Network}
+	\item \textbf{Introduction} introduces the thesis.
+	\item \textbf{Macroeconomics} gives a wide background to currencies and systems built on trust. 
+	\item \textbf{The Bitcoin Network} chapter introduces the basic bitcoin architecture, answers how trust is solved and describes bitcoin script as it allows further development as a base protocol.
+	\item \textbf{Scaling Bitcoin} describes historical attempts to scale bitcoin and the merit of an wide array of scaling solutions.
+	\item \textbf{The Lightning Network} 
 	\item \textbf{Evaluation}
 	\item \textbf{Results}
 	\item \textbf{Discussion \& Conclusions}
