adjusted the introduction

--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -1,5 +1,7 @@
 \chapter{Evaluation}
 
+( DONT MIND THIS CHAPTER AS MOSTLY SOFTWARE FOR THIS PART IS CURRENTLY WRITTEN AND CONTAINS ONLY THE BARE ESSENTAIL THOUGHS)
+
 With the eventual growth of the Lightning Network a fee market for channel liquidity will emerge. How routing nodes 
 
 \section{Lightning network as a graph}
@@ -71,25 +73,7 @@ Does it become scale free
 
 does any channel opening algorithm perform better than another and essentially force the network into a scale free hub-spoke network instead of a mesh network?
  
-oaeu
-oaeu
-aoue
-aoeu
-aou
-aoeu
-oa
-uao
-ue
-aoeu
-oaue
-oaeu
-aoeu
-aoe
-uaoeu aoeu oaeu aoe uaoeu oaeuthnoeuatnh 
-aoeu oaeu oeau thnoeutnhoeuaththe thoaeutheoua 
-aoeu h
-coeauueuoae uoeua croeaghc oeauh eoucreou chregoucr 
-coraeugcrg ecuogcroeug e auoe craoecucgcr aoecug ceoeau 
+
 
 
 \newpage
