--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -243,8 +243,7 @@ TOR, reverse govern-print mention
 
 % Bitcoin
 
-@book{
-	antonopoulos:mastering:bitcoin,
+@book{antonopoulos:mastering:bitcoin,
 	author = {Antonopoulos, Andreas},   
 	title = {Mastering Bitcoin},
 	publisher = {O'Reilly Media},
@@ -580,6 +579,14 @@ TOR, reverse govern-print mention
 	year = "",
 }
 
+@article{gunspan:marco:ant,
+	title = {Ant Routing Algorithm for the Lightning Network},
+	author = {Cyril Grunspan and Perez-Marco, Ricardo},
+	howpublished = { \url{https://webusers.imj-prg.fr/~ricardo.perez-marco/publications/articles/antrouting3.pdf} },
+	issue_date = {},
+	year = "",
+}
+
 @misc{repository:lnd,
 	author = {},
 	title = {Lightning node daemon},
@@ -730,9 +737,6 @@ year = "",
 		\url{http://bioinfo.ict.ac.cn/~dbu/AlgorithmCourses/Lectures/Lec7-Johnson.pdf}
 	}
 }
-
-
-
 
 % Game Theory 
 
