--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -64,6 +64,9 @@ As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive s
 	\item SegWit2x
 \end{itemize} 
 
+
+( THIS SECTION IS OBVOUSLY NOT DONE) 
+
 \section{Removing decentralization}
 
 \section{Side channel}
